<resources>
    <string name="app_name">Trojan记账</string>
    <string name="editonce">记账</string>
    <string name="thismonth_in">本月收入</string>
    <string name="thismonth_out">本月支出</string>
    <string name="budget_left">预算剩余</string>
    <string name="search_chart">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="set_budget">设置预算</string>
    <string name="please_search_info">输入备注内容</string>
    <string name="data_empty">暂无数据</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="about_appinfo">应用信息</string>
    <string name="about_version">版本号</string>
    <string name="about_version_content">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_app_content">17本计科三班卜雄宇移动开发课设</string>
    <string name="history_info">本月账单记录</string>
    <string name="defaultstr">默认字符串</string>
    <string name="clear_all">清空所有记录</string>
    <string name="chart_info">账单详情</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="no_data">暂无数据</string>
    <string name="dayweekmonthView">日周月视图</string>
    <string name="thisday">本日</string>
    <string name="thisweek">本周</string>
    <string name="thismonth">本月</string>
    <string name="dayweekmonth">日周月</string>
</resources>